--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,7 @@
 version: 0.2
+
 phases:
   build:
     commands:
-      - pip install -r requirements.txt
-      - sam deploy -no-confirm-changeset -no-fail-on-empty-changeset -no-progressbar -debug
+       - pip install -r hello_world/requirements.txt
+       - sam deploy -no-confirm-changeset -no-fail-on-empty-changeset -no-progressbar -debug
