--- a/buildspec2.yml
+++ b/buildspec2.yml
@@ -14,7 +14,8 @@ phases:
   build:
     commands:
       - sam build
-      - sam deploy --stack-name hello-world --capabilities CAPABILITY_IAM --no-confirm-changeset
+      - sam package --resolve-s3 --output-template-file packaged.yaml
+    
 
   post_build:
     commands:
